<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.vaadin.addon</groupId>
	<version>2.0.0-SNAPSHOT</version>
	<artifactId>vaadin-calendar</artifactId>
	<packaging>jar</packaging>
	<name>Vaadin Calendar</name>
	<inceptionYear>2010</inceptionYear>

	<organization>
		<name>Vaadin Ltd</name>
		<url>http://vaadin.com/</url>
	</organization>
	<url>http://vaadin.com/</url>
	<scm>
		<connection>scm:git:git@dev.vaadin.com:/addons/calendar/calendar.git</connection>
		<developerConnection>scm:git:git@dev.vaadin.com:/addons/calendar/calendar.git</developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.organization>Vaadin Ltd</project.organization>
		<vaadin.version.maven>7.0.0.rc2</vaadin.version.maven>
		<snapshot.repository.url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</snapshot.repository.url>
	</properties>

	<profiles>
		<profile>
			<id>test-on-hub</id>
			<properties>
				<!-- Intra net address for TB3 hub -->
				<tb.hub>matin-vehje.office.itmill.com</tb.hub>
			</properties>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>vaadin-snapshots</id>
			<name>Vaadin snapshot repository</name>
			<url>${snapshot.repository.url}</url>
		</snapshotRepository>
	</distributionManagement>

	<licenses>
    <license>
    <name>The Apache Software License, Version 2.0</name>
    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    <distribution>repo</distribution>
    </license>
	</licenses>

	<build>
		<resources>
			<!-- These are also needed for the sources required by the GWT compiler 
				to be included in the produced JARs -->
			<resource>
				<directory>src/main/java</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<configuration>
					<basedir>${basedir}</basedir>
					<header>${basedir}/src/license/apache2/header.txt</header>
					<quiet>false</quiet>
					<failIfMissing>true</failIfMissing>
					<aggregate>false</aggregate>
					<useDefaultExcludes>true</useDefaultExcludes>
					<useDefaultMapping>true</useDefaultMapping>
					<encoding>UTF-8</encoding>
					<properties>
						<year>${project.inceptionYear}</year>
					</properties>
					<excludes>
						<exclude>target/**</exclude>
						<exclude>doc/**</exclude>
						<exclude>**/*.xml</exclude>
						<exclude>src/license/**/*</exclude>
						<exclude>README</exclude>
						<exclude>LICENSE</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<!-- Implementation-Title and Implementation-Version come from the 
								POM by default -->
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<!-- Package format version - do not change -->
							<Vaadin-Package-Version>1</Vaadin-Package-Version>

							<!-- Add-on specific fields to update -->

							<!-- Implementation-Title and Implementation-Version come from the 
								POM by default -->

							<!-- Comma-separated list of widgetsets in the package -->
							<Vaadin-Widgetsets>com.vaadin.addon.calendar.gwt.CalendarWidgetset</Vaadin-Widgetsets>
						</manifestEntries>
					</archive>
					<!-- <excludes> -->
					<!-- Remove resources included due to gwt compilation -->
					<!-- TODO <exclude>**/demoandtestapp/*</exclude> -->
					<!-- </excludes> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<configuration>
					<excludeResources>true</excludeResources>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>target/libs</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<!-- This creates a zip file of jar and sources jar. When publishing in 
				the Directory this makes sources available to maven users automatically. 
				We could also use this to package required dependecies for those poor developer 
				souls that still dont know how to use a build system that supports transient 
				dependencies... -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<finalName>${project.artifactId}-${project.version}</finalName>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptors>
						<descriptor>assembly.xml</descriptor>
					</descriptors>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>test-compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<skip>${skipTests}</skip>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Copies the theme files from the demo project in the test phase -->
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/testwebapp/VAADIN/themes</outputDirectory>
							<resources>
								<resource>
									<directory>../demo/src/main/webapp/VAADIN/themes/</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<!-- Compile widget set for integration testing -->
				<plugin>
					<groupId>com.vaadin</groupId>
					<artifactId>vaadin-maven-plugin</artifactId>
					<version>${vaadin.version.maven}</version>
					<configuration>
						<webappDirectory>${project.build.directory}/testwebapp/VAADIN/widgetsets</webappDirectory>
						<extraJvmArgs>-Xmx1g -Xms1g -XX:MaxPermSize=512m</extraJvmArgs>
						<hostedWebapp>${project.build.directory}/testwebapp</hostedWebapp>
						<noServer>true</noServer>
						<runTarget>http://localhost:9998/</runTarget>
						<draftCompile>true</draftCompile>
						<style>PRETTY</style>
						<module>com.vaadin.addon.calendar.gwt.CalendarWidgetset</module>

						<!-- Skip in default phase, we only gwt compile for tests -->
						<!--<skip>true</skip> -->
						<!-- <attachDebugger>true</attachDebugger> -->
						<strict>true</strict>
					</configuration>

				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<excludes>
							<!-- Files here might match to naming convetions, but the are just 
								vaadin apps containing you add-on components in varios setups. We can ignore 
								them from test. -->
							<exclude>**/demo/*</exclude>
							<exclude>**/test/*</exclude>
						</excludes>
						<includes>
							<include>**/test/testbench/*</include>
							<include>**/test/unit/*</include>
						</includes>
						<systemProperties>
							<property>
								<name>tb.hub</name>
								<value>${tb.hub}</value>
							</property>
						</systemProperties>
					</configuration>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.0.0,)
										</versionRange>
										<goals>
											<goal>
												copy-dependencies
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.vaadin</groupId>
										<artifactId>
											vaadin-maven-plugin
										</artifactId>
										<versionRange>
											[${vaadin.version.maven},)
										</versionRange>
										<goals>
											<goal>compile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

	<repositories>
		<repository>
			<id>Vaadin releases</id>
			<url>http://oss.sonatype.org/content/repositories/vaadin-releases/</url>
		</repository>
		<repository>
			<id>vaadin-addons</id>
			<url>http://maven.vaadin.com/vaadin-addons</url>
		</repository>
		<repository>
			<id>vaadin-snapshots</id>
			<url>${snapshot.repository.url}</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Maven 2 Repository</name>
			<url>http://download.java.net/maven/2</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>eclipselink</id>
			<url>http://download.eclipse.org/rt/eclipselink/maven.repo/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>vaadin-snapshots</id>
			<url>${snapshot.repository.url}</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>

	</pluginRepositories>


	<dependencies>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-server</artifactId>
			<version>${vaadin.version.maven}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-client</artifactId>
			<version>${vaadin.version.maven}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-themes</artifactId>
			<version>${vaadin.version.maven}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-webapp</artifactId>
			<version>7.2.2.v20101205</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-testbench</artifactId>
			<version>3.0.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>eclipselink</artifactId>
			<version>2.1.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>javax.persistence</artifactId>
			<version>2.0.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.2.8</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.vaadin.addon</groupId>
			<artifactId>jpacontainer-addon-agpl-3.0</artifactId>
			<version>3.0.0-alpha2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-testbench</artifactId>
			<version>3.0.4</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<configLocation>build/checkstyle.xml</configLocation>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

</project>
